--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>cv</title>
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <img src="./images/images.jpg" alt="Portrait" width="204" height="204">
+        <img src="./images.jpg" alt="Portrait" width="204" height="204">
     </header>
 </body>
 </html>
