fix: extra lines

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="./images.jpg" alt="Portrait" width="204" height="204">
+        <img src="/images.jpg" alt="Portrait" width="204" height="204">
     </header>
 </body>
 </html>
