feat: add lines

--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 <body>
     <header>
         <img src="/images.jpg" alt="Portrait" width="204" height="204">
+        <h1>Polina Ramzaeva</h1>
     </header>
+    <main>
+        <section>
+            <h3>CONTACTS</h3>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h3>LANGUAGES</h3>
+            <ui>
+                <li></li>
+                <li></li>
+            </ui>
+        </section>
+        <section>
+            <h3>SKILLS</h3>
+            <p></p>
+        </section>
+    </main>
 </body>
 </html>
