feat: add rows to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section>
-            <h3>CONTACTS</h3>
+            <h3 class="color_tag">CONTACTS</h3>
             <ul>
                 <li></li>
                 <li></li>
@@ -22,14 +22,14 @@
             </ul>
         </section>
         <section>
-            <h3>LANGUAGES</h3>
+            <h3 class="color_tag">LANGUAGES</h3>
             <ui>
                 <li></li>
                 <li></li>
             </ui>
         </section>
         <section>
-            <h3>SKILLS</h3>
+            <h3 class="color_tag">SKILLS</h3>
             <p></p>
         </section>
     </main>
