--- a/index.html
+++ b/index.html
@@ -1,37 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>cv</title>
-<link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <header>
-        <img src="./images.jpg" alt="Portrait" width="204" height="204">
-        <h1>Polina Ramzaeva</h1>
-    </header>
-    <main>
-        <section>
-            <h3 class="color_tag">CONTACTS</h3>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </section>
-        <section>
-            <h3 class="color_tag">LANGUAGES</h3>
-            <ui>
-                <li></li>
-                <li></li>
-            </ui>
-        </section>
-        <section>
-            <h3 class="color_tag">SKILLS</h3>
-            <p></p>
-        </section>
-    </main>
+	<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>xthyjdbr</title>
+<link rel="stylesheet" href="./style3.css">
+	</head>
+    <div class="color">
+<header>
+    <img src="./images.jpg" alt="Portrait" width="250" height="250">
+    <h1>Polina Ramzaeva</h1>
+</header>
+<main>
+    <nav>
+    <section>
+        <h2>CONTACTS</h2>
+        <ul>
+            <li>E-mail: lespyn@mail.ru</li>
+            <li>Telegram: @chisto_baltika</li>
+            <li>GitHub: microavtobus007</li>
+        </ul>
+    </section>
+    <section>
+        <h2>LANGUAGES</h2>
+        <ul>
+            <li>English: A1</li>
+            <li>Russian: Native</li>
+        </ul>
+    </section>
+    <section>
+        <h2>EDUCATION</h2>
+        <p>Received a degree in Programming Technician in 2019.</p>
+    </sectoin>
+    <sectoin>
+        <h2>SKILLS</h2>
+        <p>There is nothing that I can write with confidence in this paragraph...</p>
+    </section>
+    <sectoin>
+        <h2>ABOUT ME</h2>
+        <p>I am 23 years old, my goal is to work in a field that interests me.</p>
+    </sectoin>
+    <section>
+        <h2>CODE EXAMPLE</h2>
+        <pre><code>
+        function multiply (a, b) { 
+        return a * b 
+        }</code></pre>
+    </section>
+    </nav>
+</main>
+</div>
+<footer>
+    <div class="zad">
+    <a href="https://rs.school/js/"><img src="./rs.png" alt="rsschool" width="250" height="100"></a>
+    <span><a href="https://github.com/microavtobus007">Visit my GitHub</a></span>
+    <span>©2022</span>
+    </div>
+</footer>
 </body>
 </html>
