--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>xthyjdbr</title>
+	<title>CV</title>
 <link rel="stylesheet" href="./style.css">
 	</head>
     <div class="color">
@@ -13,42 +13,28 @@
     <h1>Polina Ramzaeva</h1>
 </header>
 <main>
-    <nav>
-    <section>
         <h2>CONTACTS</h2>
         <ul>
             <li>E-mail: lespyn@mail.ru</li>
             <li>Telegram: @chisto_baltika</li>
             <li>GitHub: microavtobus007</li>
         </ul>
-    </section>
-    <section>
         <h2>LANGUAGES</h2>
         <ul>
             <li>English: A1</li>
             <li>Russian: Native</li>
         </ul>
-    </section>
-    <section>
         <h2>EDUCATION</h2>
         <p>Received a degree in Programming Technician in 2019.</p>
-    </sectoin>
-    <sectoin>
         <h2>SKILLS</h2>
         <p>There is nothing that I can write with confidence in this paragraph...</p>
-    </section>
-    <sectoin>
         <h2>ABOUT ME</h2>
         <p>I am 23 years old, my goal is to work in a field that interests me.</p>
-    </sectoin>
-    <section>
         <h2>CODE EXAMPLE</h2>
         <pre><code>
         function multiply (a, b) { 
         return a * b 
         }</code></pre>
-    </section>
-    </nav>
 </main>
 </div>
 <footer>
